# ARIAC_Kitting_Task

./: README.md  instructions.txt
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: PartDelivery.msg  TrayDelivery.msg
custom_msgs/srv/: ChangeGripper.srv  PickupPart.srv  PickupTray.srv  PlacingPart.srv  PlacingTray.srv  RemovePart.srv
rwa67/: CMakeLists.txt  README.md  package.xml
rwa67/config/trials/: rwa5_summer2023.yaml
rwa67/include/: change_gripper_server.hpp  floor_robot.hpp  ship_order.hpp  submit_orders.hpp
rwa67/launch/: rwa67.launch.py
rwa67/nodes/: start_comp.py  start_pickup_part_server.py  start_pickup_tray_server.py
rwa67/rwa67/: action_tree.py  competition_interface.py  pickup_part_server.py  pickup_tray_server.py  utils.py
rwa67/src/: change_gripper_server.cpp  floor_robot.cpp  floor_robot_main.cpp  ship_order.cpp  submit_orders.cpp
