<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>rwa67</name>
  <version>0.0.0</version>
  <description>Group One's package for RWA67</description>
  <maintainer email="mguertler296@gmail.com">Guertler</maintainer>
  <maintainer email="liuji@umd.edu">Ji</maintainer>
  <maintainer email="kiran99@umd.edu">Kiran</maintainer>
  <maintainer email="jossiayke@gmail.com">Yoseph</maintainer>
  <maintainer email="zzhao110@umd.edu">Zidong</maintainer>
  
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>robot_commander_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ariac_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>python3-pykdl</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
